added view for user orders and user profile

--- a/templates/editItemDialog.html
+++ b/templates/editItemDialog.html
@@ -13,7 +13,7 @@
 
         <div layout="row" layout-align="center start">
             <div flex="100" flex-gt-xs="85" flex-gt-md="70">
-                <div class="md-dialog-content" style="padding: 0;">
+                <div class="md-dialog-content" style="padding: 10px;">
                     <md-input-container class="input-add-item">
                         <label>Name</label>
                         <input ng-model="editingItem.name" type="text">
