added link to sidenav user view

--- a/templates/user.html
+++ b/templates/user.html
@@ -22,6 +22,10 @@
                             <md-icon>add</md-icon>
                             Add Product
                         </a>
+                        <a href="/#/store/manager/Apple" class="md-button md-ink-ripple side-nav-element">
+                            <md-icon>store_mall_directory</md-icon>
+                            Store manager
+                        </a>
                         <a hide-gt-sm href="" class="md-button md-ink-ripple side-nav-element"
                            ng-click="showAdvanced($event)">
                             <md-icon>person</md-icon>
