--- a/css/main.css
+++ b/css/main.css
@@ -78,6 +78,7 @@ a:hover, a:visited, a:link, a:active {
     padding-left: 8px;
     padding-right: 8px;
     padding-top: 8px;
+    padding-bottom: 8px;
 }
 
 .md-card-item {
@@ -196,6 +197,10 @@ a:hover, a:visited, a:link, a:active {
 
 .storage-red {
     background-color: #F44336 !important;
+}
+
+.storage-red-light {
+    background-color: rgba(244, 67, 54, 0.51) !important;
 }
 
 .no-in-store {
