--- a/templates/directives/itemCardStorageStatus.html
+++ b/templates/directives/itemCardStorageStatus.html
@@ -13,14 +13,18 @@
         </div>
         <div flex="" class="no-in-store">
             <div layout="column" layout-align="start end" style="padding-right: 30px">
-<!--                <div layout="row" layout-align="center center"
-                     ng-class="{'storage-red': (item.noInStock < 10), 'storage-yellow': (item.noInStock >= 10 && item.noInStock < 30), 'storage-green': (item.noInStock >= 30)}"
-                     style="height: 75px; width: 75px; border-radius: 75px">
-                    <div>{{item.noInStock}}</div>
-                </div>-->
-                <md-button ng-click="showPromptChangeAmount($event, item)" class="md-fab" ng-class="{'storage-red': (item.noInStock < 10), 'storage-yellow': (item.noInStock >= 10 && item.noInStock < 30), 'storage-green': (item.noInStock >= 30)}">
-                    {{item.noInStock}}
-                </md-button>
+                <!--                <div layout="row" layout-align="center center"
+                                     ng-class="{'storage-red': (item.noInStock < 10), 'storage-yellow': (item.noInStock >= 10 && item.noInStock < 30), 'storage-green': (item.noInStock >= 30)}"
+                                     style="height: 75px; width: 75px; border-radius: 75px">
+                                    <div>{{item.noInStock}}</div>
+                                </div>-->
+                <div>
+                    <md-icon style="color: #F44336" class="iconTopNavMaterial" ng-show="(item.noInStock == 0)">warning</md-icon>
+                    <md-button ng-click="showPromptChangeAmount($event, item)" class="md-fab"
+                               ng-class="{'storage-red': (item.noInStock < 10), 'storage-yellow': (item.noInStock >= 10 && item.noInStock < 30), 'storage-green': (item.noInStock >= 30)}">
+                        {{item.noInStock}}
+                    </md-button>
+                </div>
             </div>
         </div>
     </div>
