--- a/css/main.css
+++ b/css/main.css
@@ -78,7 +78,10 @@ a:hover, a:visited, a:link, a:active {
     padding-left: 8px;
     padding-right: 8px;
     padding-top: 8px;
-    padding-bottom: 8px;
+}
+
+.item-storage-container {
+    padding: 8px;
 }
 
 .md-card-item {
