small changes in sidenav

--- a/templates/itemSearch.html
+++ b/templates/itemSearch.html
@@ -30,7 +30,8 @@
                             <md-icon>shopping_basket</md-icon>
                             Cart
                         </a>
-                        <md-divider></md-divider>
+                        <md-divider style="padding: 0; margin: 0"></md-divider>
+                        <p style="margin: 0; padding-left: 10px; font-weight: 500; font-size: 14px; text-transform: uppercase;">Categories: </p>
                         <div ng-repeat="category in categories" style="padding: 0;">
                             <a href="/#/category/{{category}}" class="md-button md-ink-ripple side-nav-element">
                                 {{category}}
