closing cart dialog after redirecting to order confirm page

--- a/templates/cartDialog.html
+++ b/templates/cartDialog.html
@@ -32,7 +32,7 @@
             <md-icon>shopping_cart</md-icon>
         </md-button>
         <a ng-href="/#/order/confirm">
-            <md-button class="md-raised">
+            <md-button ng-click="cancel()" class="md-raised">
                 To checkout
                 <md-icon>check</md-icon>
             </md-button>
