--- a/templates/storeManager.html
+++ b/templates/storeManager.html
@@ -7,11 +7,11 @@
                 <md-sidenav flex="100"
                             class="md-sidenav-left"
                             md-component-id="left"
-                            md-is-locked-open="$mdMedia('gt-md')"
+                            md-is-locked-open="$mdMedia('gt-sm')"
                             md-whiteframe="4">
 
                     <md-content flex="100" layout-padding ng-controller="LeftCtrl" style="padding: 0">
-                        <md-button ng-click="close()" class="md-primary" hide-gt-md>
+                        <md-button ng-click="close()" class="md-primary" hide-gt-sm>
                             Close Sidenav Left
                         </md-button>
                         <a href="/#/" class="md-button md-ink-ripple side-nav-element">
