--- a/templates/storeManagerStorage.html
+++ b/templates/storeManagerStorage.html
@@ -28,7 +28,7 @@
                             Cart
                         </a>
                         <md-divider></md-divider>
-                        <a href="/#/store/manager/{{store.name}}/edit" class="md-button md-ink-ripple side-nav-element" ng-click="">
+                        <a ng-click="showEditStoreDetailsDialog($event)" href="" class="md-button md-ink-ripple side-nav-element" ng-click="">
                             <md-icon>mode_edit</md-icon>
                             Edit
                         </a>
