improved adding to cart offer and chosen byId item

--- a/templates/itemSingleOffer.html
+++ b/templates/itemSingleOffer.html
@@ -57,7 +57,7 @@
                     </div>
                     <div class="item-single-price">
                         {{single.price | currency}}
-                        <md-button class="md-primary md-raised" ng-click="addItemToCart(single, cheapest)">BUY NOW</md-button>
+                        <md-button class="md-primary md-raised" ng-click="addItemToCart(single)">BUY NOW</md-button>
                     </div>
                     <div>
                         {{single.avgRating}}
