fixed position of toasts

--- a/templates/itemView.html
+++ b/templates/itemView.html
@@ -1,7 +1,7 @@
 <div layout="row" layout-align="center start">
     <div flex="100" flex-gt-xs="85" flex-gt-md="70">
 
-        <div hide-gt-md layout="column">
+        <div hide-gt-sm layout="column">
             <md-sidenav flex="100"
                         class="md-sidenav-left"
                         md-component-id="left"
