moved toast container from main html

--- a/templates/itemView.html
+++ b/templates/itemView.html
@@ -1,6 +1,12 @@
 <div layout="row" layout-align="center start">
     <div flex="100" flex-gt-xs="85" flex-gt-md="70">
 
+        <div>
+            <div id="toastContainer" style="width: 300px; height: 65px; position: fixed; right: 0; bottom: 0; background-color: red; z-index: 10">
+
+            </div>
+        </div>
+
         <div hide-gt-sm layout="column">
             <md-sidenav flex="100"
                         class="md-sidenav-left"
