--- a/templates/itemView.html
+++ b/templates/itemView.html
@@ -2,7 +2,7 @@
     <div flex="100" flex-gt-xs="85" flex-gt-md="70">
 
         <div>
-            <div id="toastContainer" style="width: 300px; height: 65px; position: fixed; right: 0; bottom: 0; background-color: red; z-index: 10">
+            <div id="toastContainer" style="width: 0px; height: 0px; position: fixed; right: 0; top: 0; z-index: 10;">
 
             </div>
         </div>
