--- a/templates/itemsInStore.html
+++ b/templates/itemsInStore.html
@@ -28,7 +28,7 @@
             <div flex="" style="width: 100%; padding-bottom: 8px">
 
                 <div ng-repeat="item in store.items">
-                    <item-card></item-card>
+                    <item-card-single-offer></item-card-single-offer>
                 </div>
             </div>
 
