--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
         <div flex="100" flex-gt-xs="66" flex-gt-sm="50" flex-gt-md="33" layout="column" style="padding: 25px 25px 0;"
              md-whiteframe="10">
             <div class="price teal-text" layout="row" layout-align="center center">Sign in</div>
-            <form>
+            <!--<form>
                 <md-input-container class="input-add-item">
                     <label>
                         <md-icon>person</md-icon>
@@ -30,7 +30,29 @@
                         <md-icon ng-click="login()">send</md-icon>
                     </md-button>
                 </div>
+            </form>-->
+
+            <form>
+                <div class="form-group"
+                     ng-class="{'has-error is-focused' : authenticationError}">
+                    <input id="login" ng-model="username" type="text" class="form-control"
+                           required="required" placeholder="login"/>
+                    <span ng-show="authenticationError" class="help-block">
+            Please check your credentials and try again.
+        </span>
+                </div>
+
+                <div class="form-group">
+                    <input id="password" ng-model="password" type="password" class="form-control"
+                           required="required" placeholder="password"/>
+                </div>
+
+                <input type="checkbox" ng-model="rememberMe"/><span> Remember me</span>
+
+                <button ng-click="login()">Login</button>
             </form>
+
+
         </div>
     </div>
 </div>
