--- a/templates/login.html
+++ b/templates/login.html
@@ -35,16 +35,20 @@
             <form>
                 <div class="form-group"
                      ng-class="{'has-error is-focused' : authenticationError}">
-                    <input id="login" ng-model="username" type="text" class="form-control"
-                           required="required" placeholder="login"/>
+                    <md-input-container>
+                        <input id="login" ng-model="username" type="text" class="form-control"
+                                               required="required" placeholder="login"/>
+                    </md-input-container>
                     <span ng-show="authenticationError" class="help-block">
             Please check your credentials and try again.
         </span>
                 </div>
 
                 <div class="form-group">
-                    <input id="password" ng-model="password" type="password" class="form-control"
-                           required="required" placeholder="password"/>
+                    <md-input-container>
+                        <input id="password" ng-model="password" type="password" class="form-control"
+                               required="required" placeholder="password"/>
+                    </md-input-container>
                 </div>
 
                 <input type="checkbox" ng-model="rememberMe"/><span> Remember me</span>
