--- a/templates/login.html
+++ b/templates/login.html
@@ -33,8 +33,7 @@
             </form>-->
 
             <form>
-                <div class="form-group"
-                     ng-class="{'has-error is-focused' : authenticationError}">
+                <div>
                     <md-input-container>
                         <input id="login" ng-model="username" type="text" class="form-control"
                                                required="required" placeholder="login"/>
@@ -44,7 +43,7 @@
         </span>
                 </div>
 
-                <div class="form-group">
+                <div>
                     <md-input-container>
                         <input id="password" ng-model="password" type="password" class="form-control"
                                required="required" placeholder="password"/>
@@ -53,7 +52,7 @@
 
                 <input type="checkbox" ng-model="rememberMe"/><span> Remember me</span>
 
-                <button ng-click="login()">Login</button>
+                <md-button ng-click="login()">Login</md-button>
             </form>
 
 
