login fix ng-model

--- a/templates/login.html
+++ b/templates/login.html
@@ -66,7 +66,7 @@
                     <label>
                         <md-icon>lock</md-icon>
                         Password</label>
-                    <input ng-model="user.credentials.password" type="password">
+                    <input ng-model="password" type="password">
                 </md-input-container>
                 <span ng-show="authenticationError" class="help-block">
             Please check your credentials and try again.
