--- a/templates/itemSearch.html
+++ b/templates/itemSearch.html
@@ -26,7 +26,7 @@
                             <md-icon>add</md-icon>
                             Add Product
                         </a>
-                        <a hide-gt-sm href="" class="md-button md-ink-ripple side-nav-element" ng-click="showAdvanced($event)">
+                        <a hide-gt-sm href="" class="md-button md-ink-ripple side-nav-element" ng-click="showCart($event)">
                             <md-icon>shopping_basket</md-icon>
                             Cart
                         </a>
