--- a/templates/storeManagerStorage.html
+++ b/templates/storeManagerStorage.html
@@ -23,7 +23,7 @@
                             Add Product
                         </a>
                         <a hide-gt-sm href="" class="md-button md-ink-ripple side-nav-element"
-                           ng-click="showAdvanced($event)">
+                           ng-click="showCart($event)">
                             <md-icon>shopping_basket</md-icon>
                             Cart
                         </a>
