--- a/templates/user.html
+++ b/templates/user.html
@@ -27,12 +27,12 @@
                             Store manager
                         </a>
                         <a hide-gt-sm href="" class="md-button md-ink-ripple side-nav-element"
-                           ng-click="showAdvanced($event)">
+                           ng-click="showCart($event)">
                             <md-icon>person</md-icon>
                             Your Profile
                         </a>
                         <a hide-gt-sm href="" class="md-button md-ink-ripple side-nav-element"
-                           ng-click="showAdvanced($event)">
+                           ng-click="showCart($event)">
                             <md-icon>shopping_basket</md-icon>
                             Cart
                         </a>
