--- a/templates/itemSearch.html
+++ b/templates/itemSearch.html
@@ -30,6 +30,14 @@
                             <md-icon>shopping_basket</md-icon>
                             Cart
                         </a>
+                        <a access="ROLE_USER" hide-gt-sm href="" class="md-button md-ink-ripple side-nav-element" ng-click="logout()">
+                            <md-icon>power_settings_new</md-icon>
+                            Logout
+                        </a>
+                        <a hide-gt-sm ng-href="/#/user/user" class="md-button md-ink-ripple side-nav-element" ng-click="">
+                            <md-icon ng-click="">person</md-icon>
+                            Your Profile
+                        </a>
                         <md-divider style="padding: 0; margin: 0"></md-divider>
                         <p style="margin: 0; padding-left: 10px; font-weight: 500; font-size: 14px; text-transform: uppercase;">Categories: </p>
                         <div ng-repeat="category in categories" style="padding: 0;">
