sending login form after clicking enter

--- a/templates/login.html
+++ b/templates/login.html
@@ -32,29 +32,29 @@
                 </div>
             </form>-->
 
-<!--            <form>
-                <div>
-                    <md-input-container class="input-add-item">
-                        <input id="login" ng-model="username" type="text" class="form-control"
-                                               required="required" placeholder="login"/>
-                    </md-input-container>
-                    <span ng-show="authenticationError" class="help-block">
-            Please check your credentials and try again.
-        </span>
-                </div>
+            <!--            <form>
+                            <div>
+                                <md-input-container class="input-add-item">
+                                    <input id="login" ng-model="username" type="text" class="form-control"
+                                                           required="required" placeholder="login"/>
+                                </md-input-container>
+                                <span ng-show="authenticationError" class="help-block">
+                        Please check your credentials and try again.
+                    </span>
+                            </div>
 
-                <div>
-                    <md-input-container class="input-add-item">
-                        <input id="password" ng-model="password" type="password" class="form-control"
-                               required="required" placeholder="password"/>
-                    </md-input-container>
-                </div>
+                            <div>
+                                <md-input-container class="input-add-item">
+                                    <input id="password" ng-model="password" type="password" class="form-control"
+                                           required="required" placeholder="password"/>
+                                </md-input-container>
+                            </div>
 
-                <md-button class="md-primary md-raised" ng-click="login()">Login</md-button>
-            </form>-->
+                            <md-button class="md-primary md-raised" ng-click="login()">Login</md-button>
+                        </form>-->
 
 
-            <form>
+            <form ng-submit="login()">
                 <md-input-container class="input-add-item">
                     <label>
                         <md-icon>person</md-icon>
@@ -72,10 +72,11 @@
             Please check your credentials and try again.
         </span>
                 <div layout="row" layout-align="end center">
-                    <md-button ng-click="login()" class="md-primary md-raised">
-                        Sign in
-                        <md-icon>send</md-icon>
-                    </md-button>
+                    <input type="submit" style="position: absolute; left: -9999px">
+                        <md-button ng-click="login()" class="md-primary md-raised">
+                            Sign in
+                            <md-icon>send</md-icon>
+                        </md-button>
                 </div>
             </form>
 
