--- a/templates/error404.html
+++ b/templates/error404.html
@@ -6,13 +6,13 @@
             <div layout="row" layout-align="center center">
                 <div layout="row">
                     <md-icon class="red-text large-icon">error</md-icon>
-                    <div style="font-size: 50px" class="red-text">Error 403</div>
+                    <div style="font-size: 50px" class="red-text">Error 404</div>
                 </div>
             </div>
 
 
             <div class="red-text" style="font-size: 30px; padding-bottom: 25px; padding-top: 25px; text-align: center">
-                You do not have permission to enter this page
+                Requested page does not exist
             </div>
         </div>
     </div>
