added info page

--- a/templates/itemSearch.html
+++ b/templates/itemSearch.html
@@ -14,6 +14,10 @@
                         <md-button ng-click="close()" class="md-primary" hide-gt-sm>
                             Close Sidenav Left
                         </md-button>
+                        <a href="/#/info" class="md-button md-ink-ripple side-nav-element">
+                            <md-icon>info</md-icon>
+                            About
+                        </a>
                         <a href="/#/" class="md-button md-ink-ripple side-nav-element">
                             <md-icon>home</md-icon>
                             Home page
