--- a/templates/info.html
+++ b/templates/info.html
@@ -1,2 +1,80 @@
-<div>Information page about this store</div>
-<h1>under the hood: </h1>
+<div layout="row" layout-align="center start">
+    <div flex="100" flex-gt-xs="85" flex-gt-md="70" style="padding: 10px">
+        <div class="price teal-text" style="padding-bottom: 10px">
+            About this project
+        </div>
+        <div style="font-size: 20px; padding-left: 25px">
+            This is my personal project I made during learning Angular.js
+        </div>
+        <div class="price teal-text" style="padding-bottom: 10px">
+            Under the hood
+        </div>
+        <div layout="row" layout-align="space-around center">
+
+            <div style="width: 150px; height: 150px" layout="row" layout-align="center center">
+                <img style="height: 120px; width: 120px"
+                     src="https://www.ethode.com/dotAsset/a3721082-791e-40a8-88c4-6909d4e114d3.png">
+            </div>
+            <div style="width: 150px; height: 150px" layout="row" layout-align="center center">
+                <img style="height: 100px; width: 100px"
+                     src="http://design.jboss.org/hibernate/logo/final/hibernate_icon_whitebkg_256px.png">
+            </div>
+            <div style="width: 150px; height: 150px" layout="row" layout-align="center center">
+                <img style="height: 150px; width: 150px"
+                     src="https://i.ytimg.com/i/bn1OgGei-DV7aSRo_HaAiw/mq1.jpg?v=57d9f2ca">
+            </div>
+            <div style="width: 150px; height: 150px" layout="row" layout-align="center center">
+                <img style="height: auto; width: 150px"
+                     src="http://realeyes.com/wp-content/uploads/angularmaterial.png">
+            </div>
+            <div style="width: 150px; height: 150px" layout="row" layout-align="center center">
+                <img style="height: auto; width: 150px"
+                     src="https://upload.wikimedia.org/wikipedia/en/thumb/6/62/MySQL.svg/640px-MySQL.svg.png">
+            </div>
+
+        </div>
+
+
+        <div layout="row" layout-align="space-around center">
+            <div style="width: 150px; text-align: center">Spring boot</div>
+            <div style="width: 150px; text-align: center">Hibernate</div>
+            <div style="width: 150px; text-align: center">Angular.js</div>
+            <div style="width: 150px; text-align: center">Angular material</div>
+            <div style="width: 150px; text-align: center">MySQL</div>
+        </div>
+
+        <div class="price teal-text" style="padding-bottom: 10px">
+            Tools used
+        </div>
+
+        <div layout="row" layout-align="space-around center">
+
+            <div style="width: 150px; height: 150px" layout="row" layout-align="center center">
+                <img style="height: 100px; width: 100px"
+                     src="http://seeklogo.com/images/I/intellij-idea-logo-F0395EF783-seeklogo.com.png">
+            </div>
+            <div style="width: 150px; height: 150px" layout="row" layout-align="center center">
+                <img style="height: 130px; width: 130px"
+                     src="images/webstorm.png">
+            </div>
+            <div style="width: 150px; height: 150px" layout="row" layout-align="center center">
+
+                <img style="height: 100px; width: 100px"
+                     src="https://d3nmt5vlzunoa1.cloudfront.net/teamcity/files/2015/12/icon_TeamCity.png">
+            </div>
+            <div style="width: 150px; height: 150px" layout="row" layout-align="center center">
+                <img style="height: auto; width: 120px"
+                     src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png">
+            </div>
+
+        </div>
+
+
+        <div layout="row" layout-align="space-around center">
+            <div style="width: 150px; text-align: center">IntelliJ IDEA</div>
+            <div style="width: 150px; text-align: center">WebStorm</div>
+            <div style="width: 150px; text-align: center">TeamCity</div>
+            <div style="width: 150px; text-align: center">Git</div>
+        </div>
+    </div>
+</div>
