added webstorm logo

--- a/templates/itemSearch.html
+++ b/templates/itemSearch.html
@@ -15,7 +15,7 @@
                             Close Sidenav Left
                         </md-button>
                         <a href="/#/info" class="md-button md-ink-ripple side-nav-element">
-                            <md-icon>info</md-icon>
+                            <md-icon>info_outline</md-icon>
                             About
                         </a>
                         <a href="/#/" class="md-button md-ink-ripple side-nav-element">
